--- a/p5-rotas-parameters/package.json
+++ b/p5-rotas-parameters/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "p4-express",
+  "name": "p5-rotas-parameters",
   "version": "1.0.0",
-  "description": "api nodejs",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Willy",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1"
