--- a/form-login-back/package.json
+++ b/form-login-back/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "form-loguin",
+  "name": "form-login-back",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -19,9 +19,6 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4",
     "vite": "^2.9.9"
   }
 }
