--- a/p13-products/package.json
+++ b/p13-products/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.0"
